# MultiMind

./: .env.example  .gitignore  ARCHITECTURE.md  BOB_INTEGRATION_GUIDE.md  DEPLOYMENT.md  Dockerfile  EXECUTION_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STRATEGY.md  INSTALL.md  MCP_SERVER_GUIDE.md  Makefile  PLANNING_COMPLETE.md  PROJECT_SUMMARY.md  README.md  README_MCP_SERVER.md  RELEASE_NOTES.md  TECHNICAL_SPEC.md  VALIDATION_CHECKLIST.md  WORKFLOW_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start_mcp_server.py  test_bob_integration.md  test_mcp_server.py
.bob/: By Anna Gutowska.md  mcp.json
docs/: api.md
examples/: README.md  inspect_context.py  register_repos.py  run_orchestration.py
src/repomesh/: __init__.py  mcp_server.py
src/repomesh/agents/: __init__.py  backend.py  base.py  frontend.py  registry.py
src/repomesh/api/: __init__.py  main.py
src/repomesh/api/routes/: __init__.py  context.py  health.py  orchestration.py  repositories.py
src/repomesh/context/: __init__.py  manager.py  store.py
src/repomesh/core/: __init__.py  events.py  exceptions.py  models.py  types.py
src/repomesh/orchestrator/: __init__.py  workflow.py
src/repomesh/utils/: __init__.py  config.py  logging.py  tracing.py
